--- a/game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt
+++ b/game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt
@@ -26,7 +26,7 @@
 		"LifestrikeHeal_postvalue_label"				"Heal on Melee Hit"
 
 		//Tesla Bullets
-		"upgrade_chain_lightning_desc"	"Your bullets have a chance to <span class=\"highlight\">shock</span> your target.  The <span class=\"highlight\">shock</span> will jump to a nearby enemy."
+		"upgrade_chain_lightning_desc"	"Your bullets have a chance to <span class=\"highlight\">shock</span> your target. The <span class=\"highlight\">shock</span> will jump to a nearby enemy."
 
 		//Galvanic Storm
 		"GalvanicBuffDuration_label"						"Duration"
@@ -231,7 +231,7 @@
 		//Disarming Bullets
 
 		//Glass Cannon
-		"upgrade_glass_cannon_desc"		"Each hero kill grants <span class=\"highlight\">permanent Fire Rate</span> (up to a max of {s:MaxStacks} times).  Death results in the loss of 1 stack."
+		"upgrade_glass_cannon_desc"		"Each hero kill grants <span class=\"highlight\">permanent Fire Rate</span> (up to a max of {s:MaxStacks} times). Death results in the loss of 1 stack."
 		"GlassCannon_SlowPercent_label"		"Bullet Slow Proc"
 		"GlassCannon_SlowPercent_postvalue_label"		"Bullet Slow Proc"
 		"GlassCannon_SlowPercent_postfix"	"%"
@@ -248,7 +248,7 @@
 		"ActiveBonusLifesteal_postfix"	"%"
 
 		//Siphon Bullets
-		"upgrade_siphon_bullets_desc_passive2"	"Your bullets temporarily <span class=\"highlight\">steal Max HP</span> from enemies. Enemies regain their stolen health when the debuff expires.  Permanently steal {s:StealPerKill} stacks of health if a siphoned target dies and lose {s:StackLostPerDeath} stacks if you die."
+		"upgrade_siphon_bullets_desc_passive2"	"Your bullets temporarily <span class=\"highlight\">steal Max HP</span> from enemies. Enemies regain their stolen health when the debuff expires. Permanently steal {s:StealPerKill} stacks of health if a siphoned target dies and lose {s:StackLostPerDeath} stacks if you die."
 		"HealthSteal_label"						"Max HP Steal Per Bullet"
 		"HealthSteal_postvalue_label"						"Max HP Steal Per Bullet"
 
@@ -274,8 +274,8 @@
 		"DisarmDuration_postfix"						"s"
 		"LifestealHeal_label"				"Heal on Melee Hit"
 		"LifestealHeal_postvalue_label"				"Heal on Melee Hit"
-		"LifestealHealPercent_label"				"% Melee Hit Heal"
-		"LifestealHealPercent_postvalue_label"				"% Melee Hit Heal"
+		"LifestealHealPercent_label"				"Melee Hit Heal"
+		"LifestealHealPercent_postvalue_label"				"Melee Hit Heal"
 		"LifestealHealPercent_postfix"				"%"
 
 
@@ -333,10 +333,10 @@
 		"VeilWalker_Heal_postfix"		""
 
 		//Glass Cannon2
-		"upgrade_glass_cannon2_desc"		"Each hero kill grants <span class=\"highlight\">permanent Weapon Damage</span> (up to a max of {s:MaxStacks} times).  Death results in the loss of 1 stack."
+		"upgrade_glass_cannon2_desc"		"Each hero kill grants <span class=\"highlight\">permanent Weapon Damage</span> (up to a max of {s:MaxStacks} times). Death results in the loss of 1 stack."
 
 		//"upgrade_split_shot"					"Split Shot"
-		"upgrade_split_shot_desc"			"Make your weapon fire <span class=\"highlight\">multishot</span>. <br><br> Hitting more than one Hero per attack will grant a <span class=\"highlight\">stacking weapon damage bonus</span>.  <br><br><span class=\"diminish\">Targets can only be hit once per multishot.</span>"
+		"upgrade_split_shot_desc"			"Make your weapon fire <span class=\"highlight\">multishot</span>. <br><br> Hitting more than one Hero per attack will grant a <span class=\"highlight\">stacking weapon damage bonus</span>. <br><br><span class=\"diminish\">Targets can only be hit once per multishot.</span>"
 		"upgrade_split_shot_desc_02"		"Splitshot Multi-Hit Bonus"
 		"SpecialShotsBonusFireRate_label"	"Fire Rate During Multishots"
 		"SpecialShotsBonusFireRate_postvalue_label"	"Fire Rate During Multishots"
@@ -360,7 +360,7 @@
 		"upgrade_enchanted_holsters_desc"		"While in-combat whenever you cast an ability or item, gain a stacking buff that improves fire rate and reload speed. <br><span class=\"diminish\">Each stack refreshes the duration.</span>"
 		
 		// "upgrade_weapon_backstabber"			"Backstabber"
-		"upgrade_weapon_backstabber_desc"		"Attacking enemies from behind with your weapon or melee opens a wound dealing {g:citadel_inline_attribute:'SpiritDPS'} and reducing their bullet resist.  During this time, if you or any allies are near the target, will see them <span class=\"highlight\">through walls</span> and be given {g:citadel_inline_attribute:'BonusMoveSpeed'}."
+		"upgrade_weapon_backstabber_desc"		"Attacking enemies from behind with your weapon or melee opens a wound dealing {g:citadel_inline_attribute:'SpiritDPS'} and reducing their bullet resist. During this time, if you or any allies are near the target, will see them <span class=\"highlight\">through walls</span> and be given {g:citadel_inline_attribute:'BonusMoveSpeed'}."
 		"BackstabberRadius_label"		"Bonus Radius"
 		"BackstabberRadius_postvalue_label"		"Bonus Radius"
 		"BackstabberRadius_prefix"		""
@@ -368,7 +368,7 @@
 		
 
 		//"upgrade_express_shot"				"Express Shot"
-		"upgrade_express_shot_desc"				"Your next attack will <span class=\"highlight\">fire twice</span> in quick succession with <span class=\"highlight\">increased damage</span> and velocity.  This attack consumes extra ammo."
+		"upgrade_express_shot_desc"				"Your next attack will <span class=\"highlight\">fire twice</span> in quick succession with <span class=\"highlight\">increased damage</span> and velocity. This attack consumes extra ammo."
 		"ProcAmmoConsumed_label"				"Extra Ammo Consumed"
 		"ProcAmmoConsumed_postvalue_label"				"Extra Ammo Consumed"
 		"ProcAmmoConsumed_postfix"				"%"
@@ -591,7 +591,7 @@
 		"SpiritSnatch_TechPowerSteal_postvalue_label"		"Spirit Power Steal"
 
 		//Clarity
-		//"upgrade_magic_clarity_desc"			"On ability or item use, gain a <span class=\"highlight\">move speed</span> bonus for {s:AbilityDuration}s.  Your next ability cast will remove the move speed bonus and apply a <span class=\"highlight\">Spirit</span> bonus to that ability."
+		//"upgrade_magic_clarity_desc"			"On ability or item use, gain a <span class=\"highlight\">move speed</span> bonus for {s:AbilityDuration}s. Your next ability cast will remove the move speed bonus and apply a <span class=\"highlight\">Spirit</span> bonus to that ability."
 		"ClarityBonusSpirit_prefix"				"{s:sign}"
 
 		//Surge of Power
@@ -611,7 +611,7 @@
 		"HealingPerCast_postvalue_label"					"Healing on Ability Cast"
 
 		// Magic carpet
-		"upgrade_magic_carpet_desc"				"Summon a Magic Carpet that will <span class=\"highlight\">fly</span> you away.  While flying you are immune to slows and doing any action will dismiss the carpet.  <span class=\"diminish\"><br>Cannot use abilities while the carpet is being summoned.</span>"
+		"upgrade_magic_carpet_desc"				"Summon a Magic Carpet that will <span class=\"highlight\">fly</span> you away. While flying you are immune to slows and doing any action will dismiss the carpet. <span class=\"diminish\"><br>Cannot use abilities while the carpet is being summoned.</span>"
 		"modifier_summon_magiccarpet"			"Summoning Magic Carpet"
 		"MagicCarpetMoveSpeed_prefix"			"+"
 		"MagicCarpetMoveSpeed_label"			"Bonus Fly Speed"
@@ -628,7 +628,7 @@
 		"upgrade_superacolytes_glove/modifier_superacoloytes_glove" "Knuckles Unsealed!"
 
 		//SpiritBurn
-		"upgrade_spirit_burn_desc"	"Dealing significant <span class=\"highlight\">Spirit Damage</span> to an enemy within {s:DamageThresholdDuration}s causes an explosion dealing damage and a burn to nearby enemies.  While burning, enemies take damage over time and receive reduced healing.<br><span class=\"diminish\">Deals half-damage and has half-cooldown on non-heroes.</span>"
+		"upgrade_spirit_burn_desc"	"Dealing significant <span class=\"highlight\">Spirit Damage</span> to an enemy within {s:DamageThresholdDuration}s causes an explosion dealing damage and a burn to nearby enemies. While burning, enemies take damage over time and receive reduced healing.<br><span class=\"diminish\">Deals half-damage and has half-cooldown on non-heroes.</span>"
 		"MinDPS_label" "Minimum DPS"
 
 		"MinDPS_postvalue_label" "Minimum DPS"
@@ -738,7 +738,7 @@
 		"SpawnTimePenalty_postfix"				"s"
 
 		//Phantom Strike
-		"upgrade_phantom_strike_desc"			"<span class=\"highlight\">Teleport</span> to an enemy target and pull them to the ground.  Dealing <span class=\"highlight\">damage</span>, <span class=\"highlight\">Move speed</span> reduction and <span class=\"highlight\">Disarm</span>."
+		"upgrade_phantom_strike_desc"			"<span class=\"highlight\">Teleport</span> to an enemy target and pull them to the ground. Dealing <span class=\"highlight\">damage</span>, <span class=\"highlight\">Move speed</span> reduction and <span class=\"highlight\">Disarm</span>."
 		"PhantomStrikeDebuffDuration_label"		"Debuff Duration"
 		"PhantomStrikeDebuffDuration_postvalue_label"		"Debuff Duration"
 		"PhantomStrikeDebuffDuration_postfix"		"s"
@@ -928,7 +928,7 @@
 		// Street Brawl Tier5
 		//----------------------------------------------------------------------------- 
 		"upgrade_icarus_wings_desc"		"When Airborne, You deal more damage and take reduced damage. Allows an additional use of <span class=\"highlight\">Air Jump</span> or <span class=\"highlight\">Air Dash</span> before landing."
-		"upgrade_mystical_piano_desc"	"After a short delay, enemies in the target area will be stunned and have their stamina depleted.  After the stun they will be temporarily dazed."
+		"upgrade_mystical_piano_desc"	"After a short delay, enemies in the target area will be stunned and have their stamina depleted. After the stun they will be temporarily dazed."
 		"upgrade_nullification_aura_desc"	"Removes any positive buffs and prevents stamina usage and healing effects on enemies."
 		"upgrade_nullification_aura_deathdamage_desc"	"Deals heavy spirit damage upon your death."
 		"upgrade_celestial_guidance_desc"	"Applies an extremely powerful cleanse that replenishes your allies globally."
@@ -947,15 +947,15 @@
 		"RespawnTime_prefix" "{s:sign}"
 
 		"upgrade_eldritch_shot_desc"			"Your next bullet applies a powerful debuff reducing the enemy's damage output, healing and movement speed. It also deals {g:citadel_inline_attribute:'BonusSpiritDamage'} based on the targets current Health. <br><br>The bullet is larger and penetrates through targets."
-		"upgrade_cloak_of_opportunity_desc"		"Block the next debuff that would apply <span class=\"highlight\">movement lock, Stun, Chained, Immobilize, or Sleep</span> and become <span class=\"highlight\">Unstoppable</span>.  Also gain a <span class=\"highlight\">Barrier</span> and bonus {g:citadel_inline_attribute:'MoveSpeed'}"
+		"upgrade_cloak_of_opportunity_desc"		"Block the next debuff that would apply <span class=\"highlight\">movement lock, Stun, Chained, Immobilize, or Sleep</span> and become <span class=\"highlight\">Unstoppable</span>. Also gain a <span class=\"highlight\">Barrier</span> and bonus {g:citadel_inline_attribute:'MoveSpeed'}"
 		"upgrade_runed_gauntlets_desc"			"Everytime you land a heavy melee, your existing cooldowns get reduced."
 		"upgrade_runed_gauntlets_parry_desc"		"Pierces through parry."
-		"upgrade_electric_slippers_desc"		"When sliding, evade bullets, gain fire rate and deal damage to enemies around you.  <span class=\"diminish\"><br><br>Cooldown is per target.</span>"
+		"upgrade_electric_slippers_desc"		"When sliding, evade bullets, gain fire rate and deal damage to enemies around you. <span class=\"diminish\"><br><br>Cooldown is per target.</span>"
 		"upgrade_prism_blast_desc"				"You enter a void state and become <span class=\"highlight\">untargetable and invincible</span> for a short duration, during which lasers blast out and rotate around you."
-		"upgrade_unstable_concoction_desc"		"Consume a concotion that grants you increased <span class=\"highlight\">speed, health, spirit and weapon damage</span>.  After a short duration <span class=\"highlight\">you die and explode</span>, stunning nearby enemies and dealing damage based on your maximum health."
-		"upgrade_shivas_bracelet_desc"			"Imbued ability has its <span class=\"highlight\">Cooldown reduced</span> and gains <span class=\"highlight\">Spirit Power</span>.  When the ability deals damage, <span class=\"highlight\">freeze</span> the target and apply <span class=\"highlight\">bonus damage</span>. <span class=\"diminish\"><br><br>Cooldown is per target.</span>"
+		"upgrade_unstable_concoction_desc"		"Consume a concotion that grants you increased <span class=\"highlight\">speed, health, spirit and weapon damage</span>. After a short duration <span class=\"highlight\">you die and explode</span>, stunning nearby enemies and dealing damage based on your maximum health."
+		"upgrade_shivas_bracelet_desc"			"Imbued ability has its <span class=\"highlight\">Cooldown reduced</span> and gains <span class=\"highlight\">Spirit Power</span>. When the ability deals damage, <span class=\"highlight\">freeze</span> the target and apply <span class=\"highlight\">bonus damage</span>. <span class=\"diminish\"><br><br>Cooldown is per target.</span>"
 		"upgrade_shadow_strike_desc"			"Go <span class=\"highlight\">Invisible</span> on <span class=\"highlight\">Stamina use</span> with no detection range. Doing a <span class=\"highlight\">melee attack</span> while invisible will cause you to <span class=\"highlight\">steal bullet and spirit resistance</span> from them and deal <span class=\"highlight\">damage over time</span>."
-		"upgrade_omnicharge_pendant_desc"		"Imbue any active non-ultimate ability with <span class=\"highlight\">Bonus Ability Charges</span>.  Already charged items recieve more bonus charges."
+		"upgrade_omnicharge_pendant_desc"		"Imbue any active non-ultimate ability with <span class=\"highlight\">Bonus Ability Charges</span>. Already charged abilities recieve more bonus charges."
 		"upgrade_omnicharge_pendant_charges"	"Bonus Charges"
 
 		//-----------------------------------------------------------------------------
