6301 | 9 files | M Protobufs/citadel_gcmessages_client.proto,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/styles/popups/popup_settings.css,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21930712/

--- a/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
+++ b/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
@@ -4776,7 +4776,7 @@
 		"ability_unicorn_radiantblast"				"Light Eater"
 		"ability_unicorn_radiantblast_desc"			"Blast enemies in a cone in front of you with a flare of light.  Blasted enemies take {g:citadel_inline_attribute:'SpiritDamage'} when attacked by {s:hero_name} and provides her <span class=\"highlight\">spirit lifesteal</span>."
 		"ability_unicorn_radiantblast_on_bullet_hit_desc" "On Bullet Hit"
-		"ability_unicorn_radiantblast_t2_desc"		"+{s:AbilityCastRange}m Cast Range and +{s:AbilityLifestealPercentHero}% Spirit Lifesteal"
+		"ability_unicorn_radiantblast_t2_desc"		"{s:AbilityCooldown}s Cooldown and +{s:AbilityCastRange}m Cast Range"
 		"ability_unicorn_radiantblast_t3_desc"		"+{s:Damage} Damage and Increased Spirit Scaling"
 		"FlareDamage_label"				"Flare Damage"
 		"FlareDamage_postvalue_label"				"Flare Damage"
@@ -4844,7 +4844,7 @@
 		"ability_fencer_lunge"		"Flawless Advance"
 		"ability_fencer_lunge_desc"	"Perform a series of lunges in any direction, delivering piercing stabs ahead of you. Hold your ability key to time your attacks, dealing more damage the longer its held. Releasing your attack during the <span class=\"highlight\">perfect window</span> deals <span class=\"highlight\">maximum damage</span>.<br><br><span class=\"diminish\">Press {g:citadel_binding:'Ability3'} to re-cast.</span>"
 		"ability_fencer_lunge_t1_desc" "Perfect Hit on Hero: Heal {s:HealFixedHealth}"
-		"ability_fencer_lunge_t2_desc" "{s:AbilityCooldown}s Cooldown <br>Increased lunge speed"
+		"ability_fencer_lunge_t2_desc" "{s:AbilityCooldown}s Cooldown. Gain increased <span class=\"highlight\">Speed</span> and <span class=\"highlight\">+{s:BulletResist}%</span> Bullet Resist during lunge"
 		"ability_fencer_lunge_t3_desc" "+{s:PerfectDamage} Perfect Damage and increased spirit scaling.<br>Increased lunge attacking dash distance."
 		"ability_fencer_lunge_on_hold_threshold"		"On Perfect Hold:"
 		"ability_fencer_lunge_on_hold_threshold_label"	"On Perfect Hold:"
