6304 | 4 files | M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21935809/

--- a/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
+++ b/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
@@ -4906,7 +4906,7 @@
 		"BulletResistReductionDuration_postfix"			"s"
 
 		"ability_fencer_ultimate"		"Itani Lo Sahn"
-		"ability_fencer_ultimate_desc"	"Charge up and perform a long range slash. Struck enemies are <span class=\"highlight\">cursed</span> and stuck in slow motion. When this effect expires, they suffer <span class=\"highlight\">devastating damage</span>, dealing bonus damage against half-health enemies.<br><br><span class=\"diminish\">While in slow motion, Apollo is invulnerable and enemies take reduced damage.<br><br>Hold {g:citadel_binding:'Ability4'} or {g:citadel_binding:'Attack'} to delay the cast.</span>"
+		"ability_fencer_ultimate_desc"	"Charge up and perform a long range slash. Struck enemies <span class=\"highlight\">cannot take action or heal</span> and are stuck in slow motion. When this effect expires, they suffer <span class=\"highlight\">devastating damage</span>, dealing bonus damage against half-health enemies.<br><br><span class=\"diminish\">While in slow motion, Apollo is invulnerable and enemies take reduced damage.<br><br>Hold {g:citadel_binding:'Ability4'} or {g:citadel_binding:'Attack'} to delay the cast.</span>"
 		//"ability_fencer_ultimate_t3_desc"	"+{s:ImpactDamage} Impact Damage and +{s:DelayedDamage} Delayed Damage"
 		//"ability_fencer_ultimate_t3_desc"	"{s:}% Max Health Damage"
 		"DelayedDamage_label"			"Delayed Damage"
