6316 | 8 files | M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/pak01_dir/soundevents/hero/unicorn.vsndevts,  M game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21956635/

--- a/game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt
+++ b/game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt
@@ -400,7 +400,7 @@
 		"NonHeroAbilityLifestealTooltipOnly_postfix"		"%"
 		
 		//Mystic Vulnerability
-		"upgrade_magic_vulnerability_desc"	"When the target takes <span class=\"highlight\">Spirit Damage</span>, they have their <span class=\"highlight\">Spirit Resist</span> reduced."		
+		"upgrade_magic_vulnerability_desc"	"When an enemy takes <span class=\"highlight\">Spirit Damage</span>, they have their <span class=\"highlight\">Spirit Resist</span> reduced."		
 
 		//Healbane
 		"upgrade_healbane_desc"	"Your <span class=\"highlight\">Spirit Damage</span> applies <span class=\"highlight\">Healing Reduction</span>. If an enemy hero dies under this effect, you receive a large heal."
