6323 | 29 files | M Protobufs/citadel_gcmessages_common.proto,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_bookworm.css,  M game/citadel/pak01_dir/panorama/styles/in_world_item_panel.css,  M game/citadel/pak01_dir/panorama/styles/playofthegame/citadel_hud_playofthegame.css,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/pak01_dir/soundevents/base/citadel_base_events.vsndevts,  M game/citadel/pak01_dir/soundevents/gameplay.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/abrams.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/bebop.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/fencer.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/gigawatt.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/haze.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/krill.vsndevts,  M game/citadel/pak01_dir/so
https://steamdb.info/patchnotes/21975789/

--- a/game/citadel/resource/localization/citadel_attributes/citadel_attributes_english.txt
+++ b/game/citadel/resource/localization/citadel_attributes/citadel_attributes_english.txt
@@ -669,6 +669,10 @@
 		"BulletResistReduction_postvalue_label"		"Bullet Resist"
 		"BulletResistReduction_postfix"	"%"
 
+		"MeleeResistReduction_label"		"Melee Resist"
+		"MeleeResistReduction_postvalue_label"		"Melee Resist"
+		"MeleeResistReduction_postfix"	"%"
+
 		"BulletResistReductionPerStack_label"		"Bullet Resist per Stack"
 		"BulletResistReductionPerStack_postvalue_label"		"Bullet Resist per Stack"
 		"BulletResistReductionPerStack_postfix"	"%"
