--- a/game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt
+++ b/game/citadel/resource/localization/citadel_mods/citadel_mods_english.txt
@@ -106,7 +106,7 @@
 		"upgrade_hemorrhage/modifier_item_hemorrhage/modifier_hemorrhage" "Bleeding"
 
 		//Spiritual Overflow
-		"upgrade_tech_overflow_desc"	"Gain bonus <span class=\"highlight\">Fire Rate</span> and <span class=\"highlight\">Spirit Power</span> by <span class=\"highlight\">charging up</span> when shooting enemy heroes."
+		"upgrade_tech_overflow_desc"	"Gain bonus <span class=\"highlight\">Fire Rate</span>, <span class=\"highlight\">Spirit Power</span> and <span class=\"highlight\">Cooldown Reduction</span> by <span class=\"highlight\">charging up</span> when shooting enemy heroes."
 		"modifier_tech_overflow_building" "Spiritual Overflow Building..."
 
 		"OverflowTechPower_label"		"Spirit Power"
@@ -503,6 +503,7 @@
 
 		//Ethereal Shift
 		"upgrade_self_bubble_desc"			"You enter a void state and become <span class=\"highlight\">untargetable and invincible</span> for a short duration, during which you float slowly and cannot perform actions. Afterwards you gain <span class=\"highlight\">Spirit Power, Move Speed, and Spirit Resist</span>.<br>Can be canceled early.<br><span class=\"diminish\">Activation cancels any active ability.</span>"
+		"ShiftingVeil_channel_desc"			"Invulnerable"
 		"ShiftingVeilDuration_label"			"Duration"
 		"ShiftingVeilDuration_postvalue_label"			"Duration"
 		"ShiftingVeilDuration_postfix"		"s"
@@ -620,6 +621,7 @@
 		"MagicCarpetShieldDuration_label"		"Shield Duration"
 		"MagicCarpetShieldDuration_postvalue_label"		"Shield Duration"
 		"MagicCarpetShieldDuration_postfix"		"s"
+		"MagicCarpetSummoning_channel"			"Summoning"
 
 		// Hex-Sealed Knuckles
 		"upgrade_superacolytes_glove_desc"			"After dealing an accumulated <span class=\"highlight\">{s:StoredSpiritDamage}</span> spirit damage, your next <span class=\"highlight\">Heavy Melee Attack</span> deals an additional <span class=\"highlight\">{s:StoredSpiritDamage} spirit damage</span>."
